plugins {
    id 'fabric-loom' version '1.6-SNAPSHOT' apply(false)
    id 'net.minecraftforge.gradle' version '[6.0,6.2)' apply(false)
    id 'org.spongepowered.gradle.vanilla' version '0.2.1-SNAPSHOT' apply(false)
    id("org.spongepowered.mixin") version "0.7-SNAPSHOT" apply(false)
}

subprojects {
    apply plugin: 'java'

    java.toolchain.languageVersion = JavaLanguageVersion.of(17)
    java.withSourcesJar()
    java.withJavadocJar()
        
    jar {
        from(rootProject.file("LICENSE")) {
            rename { "${it}" }
        }
        from(rootProject.file("CREDITS")) {
            rename { "${it}" }
        }
        from(rootProject.file("README.md")) {
            rename { "${it}" }
        }
        from(rootProject.file("changelog.md")) {
            rename { "${it}" }
        }
        manifest {
            attributes([
                'Specification-Title'     : mod_name,
                'Specification-Vendor'    : mod_author,
                'Specification-Version'   : project.jar.archiveVersion,
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_author,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'Timestamp'               : System.currentTimeMillis(),
                'Built-On-Java'           : "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
                'Built-On-Minecraft'      : minecraft_version
            ])
        }
    }

    javadocJar {
        from(rootProject.file("LICENSE")) {
            rename { "${it}" }
        }
        from(rootProject.file("CREDITS")) {
            rename { "${it}" }
        }
        from(rootProject.file("README.md")) {
            rename { "${it}" }
        }
        from(rootProject.file("changelog.md")) {
            rename { "${it}" }
        }
    }

    sourcesJar {
        from(rootProject.file("LICENSE")) {
            rename { "${it}" }
        }
        from(rootProject.file("CREDITS")) {
            rename { "${it}" }
        }
        from(rootProject.file("README.md")) {
            rename { "${it}" }
        }
        from(rootProject.file("changelog.md")) {
            rename { "${it}" }
        }
    }

    repositories {
        mavenCentral()
        maven {
            name = 'Sponge / Mixin'
            url = 'https://repo.spongepowered.org/repository/maven-public/'
        }
        maven {
            name = 'BlameJared Maven (JEI / CraftTweaker / Bookshelf)'
            url = 'https://maven.blamejared.com'
        }
        maven {
            name = "Fuzs Mod Resources"
            url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
        }
        maven {
            url = "https://jitpack.io"
            content {
                includeGroup("com.github.BlueMap-Minecraft")
            }
        }
        maven {
            url "https://repo.mikeprimm.com/"
        }
    }

    dependencies {
        implementation group: 'com.github.BlueMap-Minecraft', name: 'BlueMapAPI', version: 'v2.6.2'
        implementation group: 'us.dynmap', name: 'DynmapCoreAPI', version: '3.7-beta-6'
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.encoding = 'UTF-8'
        it.options.getRelease().set(17)
    }

    processResources {
        def expandProps = [
                "version": version,
                "group": project.group, //Else we target the task's group.
                "minecraft_version": minecraft_version,
                "forge_version": forge_version,
                "forge_loader_version_range": forge_loader_version_range,
                "forge_version_range": forge_version_range,
                "minecraft_version_range": minecraft_version_range,
                "fabric_version": fabric_version,
                "fabric_loader_version": fabric_loader_version,
                "mod_name": mod_name,
                "mod_author": mod_author,
                "mod_id": mod_id,
                "license": license,
                "description": project.description,
                "resource_pack_desc":resource_pack_desc,
                "credits": credits
        ]

        filesMatching(['pack.mcmeta', 'fabric.mod.json', 'META-INF/mods.toml', '*.mixins.json']) {
            expand expandProps
        }
        inputs.properties(expandProps)
    }
}
